# mlpga

./: CMakeLists.txt  README.md
src/: Network.h  genetic.h  gpufunc.cu  gpufunc.h  init.h  math.h  test.cpp  utils.h
